--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -2,7 +2,7 @@
 (The key items are picked out in bold type.) equalise for various browsers and change #header to header*/ 
 div body header #content { margin:0; padding:0; border:0; 
 } 
-body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto; 
+body { background:#FFF url(images/green-grad.jpg) repeat-x !important; margin:auto; 
 } 
 /*add display attributes for the semantic tags*/ 
 header, footer, section, article, nav { display:block; 
@@ -64,6 +64,7 @@ footer { clear:both; color:maroon; text-align:center;
 tr.zebraHover {
   background-color: #FFFACD;
 }
+
 
 
 
