--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -1,8 +1,7 @@
 /* Listing 1-7b. The Revised CSS Sheet for Figure 1-7 (html5-style-2.css) 
 (The key items are picked out in bold type.) equalise for various browsers and change #header to header*/ 
-html.ui-mobile {
-  height: 99.9%;
-  font-size: 100%;
+html {
+  display: block;
 }
 
 div.wrapper {
@@ -78,6 +77,7 @@ footer { clear:both; color:maroon; text-align:center;
 tr.zebraHover {
   background-color: #FFFACD;
 }
+
 
 
 
