--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -10,6 +10,9 @@ div.wrapper {
 div.row {
   display: block;
 }
+div.col-12 {
+  display: block; color #333;
+}
 div body header #content { margin:0; padding:0; border:0; 
 } 
 body.ui-mobile-viewport.ui-overlay-a {
@@ -78,6 +81,7 @@ footer { clear:both; color:maroon; text-align:center;
 tr.zebraHover {
   background-color: #FFFACD;
 }
+
 
 
 
