--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -34,7 +34,7 @@ h1 { font-size: xx-large; color :#333; position: relative; left:90px; top: 0px; 
 } 
 #html5stylecontent { background:#FFF url(images/green-grad.jpg) repeat-x!important; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; width: 904px; margin-top:10px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon; 
 } 
-h2 { font-size: x-large; color:rgb( #333; margin:0 0 10px 0; text-align: center; 
+h2 { font-size: x-large; color: #333; margin:0 0 10px 0; text-align: center; 
 } 
 h3 { font-size: large; color: #333; margin:0 0 6px 0; text-align: center 
 } 
