--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -5,8 +5,13 @@ html {
 }
 
 div.wrapper {
-  background:#FFF url(images/green-grad.jpg) repeat-x!important;
-  color: #333;
+    position: relative; 
+    top: 0em; 
+    left: 0; 
+    width: 61em; 
+    margin: auto;
+    background:#FFF url(images/green-grad.jpg) repeat-x!important;
+    color: #333;
 }
 div.row {
   display: block;
@@ -82,6 +87,7 @@ footer { clear:both; color:maroon; text-align:center;
 tr.zebraHover {
   background-color: #FFFACD;
 }
+
 
 
 
