--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -1,23 +1,23 @@
 /*set images to have no borders*/
 img { 	border:0;
 }
-/*add display attributes for the semantic tags*/
+/*add display attributes for the semantic tags*
 header, footer, section, article, nav { display:block; 
 }
-/*SET FONTS*/
+/*SET FONTS*
 span.small { font-size:small;
 }
 h1 { font-size:x-large; font-family:"times new roman"; text-align:center;
 }
 h2 {font-size:large; font-family:"times new roman"; text-align:center;
 }
-/*PAGE LAYOUT*/
+/*PAGE LAYOUT*
 body {margin:auto; width:970px; 
 }
 header {
 	width:970px;
 }
-
+*/
 div#inlineblockcontainer.data
 .nav { float:left; margin-left:10px; width:129px;
 }
@@ -30,7 +30,7 @@ div#inlineblockcontainer.data
 	display: block;
 	background-color: transparent;
 	}
-/*set far right column for ads*/
+/*set far right column for ads*
 #rightcol { width:150px; float:right; text-align:center;	
 }
 #rightcol p.advert {font-size:small; margin-top:190px;
@@ -41,7 +41,7 @@ div#inlineblockcontainer.data
 /*set gallery block position*/ 
 #gallery-block { position:relative; left: 30px; top:10px; 
 }
-/*set footer*/
+/*set footer*
 footer { 	clear:both; color:black; text-align:center; width:970px;
 }
 .clear { clear:both;
