--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -35,10 +35,10 @@ div#inlineblockcontainer.data
 }
 #rightcol p.advert {font-size:small; margin-top:190px;
 } 
-/*set middle column for main content*/
+/*set middle column for main content*
 #midcol { margin-left:135px; margin-right:155px;
 }
-/*set gallery block position*/ 
+/*set gallery block position* 
 #gallery-block { position:relative; left: 30px; top:10px; 
 }
 /*set footer*
@@ -46,7 +46,7 @@ footer { 	clear:both; color:black; text-align:center; width:970px;
 }
 .clear { clear:both;
 }
-/*set menu buttons*/
+/*set menu buttons*
 li.btn a { display:block; background-color :#66CCFF; color:black; font-weight:bold; padding:4px;
 	margin-left:0; text-align:center; list-style-type:none; text-decoration:none; width:110px;
 }
