--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -256,6 +256,7 @@ div#html5style2content {
   font-size: medium;
   color: maroon;
 }
+/*
 h2 {
   font-size: x-large;
   color: white;
@@ -266,6 +267,7 @@ h3 {
   color: white;
   margin: 0 0 6px 0;
 }
+  */
 div#html5style2leftcol {
   float: left;
   width: 310px;
