--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -88,7 +88,9 @@ tr.zebraHover {
   background-color: #FFFACD;
 }
 
-
+/*set gallery block position*/
+div#gallerypage-block { position:relative; left: 30px; top:10px; 
+}
 
 
 
