--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -1,7 +1,12 @@
 /* Listing 1-7b. The Revised CSS Sheet for Figure 1-7 (html5-style-2.css) 
 (The key items are picked out in bold type.) equalise for various browsers and change #header to header*/ 
 html {
-  display: block;
+    font-size: 100%;
+    display: block;
+}
+
+.ui-mobile, .ui-mobile body{
+    height: 99.9%;
 }
 
 div.wrapper {
