--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -132,7 +132,7 @@ h1 { font-size:300%; color :white; position: relative; left:90px; top: 55px; wid
 #content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; 
 border-bottom:10px white solid; width: 904px; margin-top:-10px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon; 
 }
-h2 { font-size:x-large; color:white; margin:0 0 10px 0; 
+h2 { font-size: 150%; color: #d9480f; margin:0 0 10px 0; 
 }
 h3 { font-size: 110%; color:white; margin:0 0 6px 0; 
 }
