--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -19,10 +19,12 @@ div body header #content { margin:0; padding:0; border:0;
 }
 body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto;
 }
-/*
-body {margin:auto; width:970px; 
+/* Listing 8-5b. The CSS Style Sheet for Listing 8-5a (css3-text-shadow.css) */
+body {background-color:#99CCFF;
 }
-*/
+#banner h1 { color: #fff; padding: 50px 0 0 20px; margin: 0; font-size: 2.6em; 
+text-shadow: 0.1em 0.1em 0.2em black;
+}
 header {
 	width:970px;
 }
