--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -40,6 +40,12 @@ header, footer, section, article, nav { display:block;
 } 
 h1 { font-size: 125%; color : maroon; position: relative; left:90px; top: 0px; width:480px; 
 } 
+/* Listing 8-5b. The CSS Style Sheet for Listing 8-5a (css3-text-shadow.css) */
+body {background-color:#99CCFF;
+}
+#banner h1 { color: #fff; padding: 50px 0 0 20px; margin: 0; font-size: 2.6em; 
+text-shadow: 0.1em 0.1em 0.2em black;
+}
 #rosette { position:relative; left:750px; top:5px; 
 } 
 #html5stylecontent { background:#FFF url(images/green-grad.jpg) repeat-x !important; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; width: 904px; margin-top:10px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon; 
