--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -323,7 +323,7 @@ li.hbtn a { background: #0080a0; border: 4px outset #aabaff; }
 
 /* Listing 4-7b. The CSS Listing for Changing the Tab for the five Tab Menu Pages (squaretabs.css) */
 
-div#container.data {width: 105%; margin:-47px auto 0 auto;
+div#container.data {width: 105%; margin:-6% auto 0 auto;
 }
 /* use display:inline to remove IE6 double margin bug*/
 nav li { display: inline; overflow: hidden; list-style-type: none;
