--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -20,6 +20,8 @@ span.small { font-size:small;
 h1 { font-size:x-large; font-family:"times new roman"; text-align:center;
 }
 */
+h1 { font-size:200%; font-weight:bold; margin-top:20px;
+}
 h2 {font-size:large; font-family:"times new roman"; text-align:center;
 }
 /*PAGE LAYOUT*/
