--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -7,6 +7,20 @@ div.wrapper {
     background:#FFF url(images/green-grad.jpg) repeat-x!important;
     color: #333;
 }
+#wrapper {position:relative; top:0; left:0;width:950px; margin:auto;
+text-align:center;
+}
+header {width:100%; height:80px; color:black; background-color:#FFCC00;
+padding-top:10px;
+}
+h1 { font-size:200%; font-weight:bold; margin-top:20px;
+}
+#main-content {width:950px; margin:50px auto 0 auto; background-color:white;
+color:black; text-align:center; font-weight:bold;
+}
+footer {margin:10px auto 0 auto; width:950px; font-weight:bold;
+text-align:center; background-color:#FFCC00; color:black; clear:both;
+} 
 /*set images to have no borders*/
 img { 	border:0;
 }
