--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -49,7 +49,7 @@ body {background-color:#99CCFF;
 }
 #banner h1 { color: #fff; 
   padding: 50px 0 0 20px; 
-  margin: -33px; 
+  margin: -.4em; 
   font-size: 2.6em; 
 text-shadow: 0.1em 0.1em 0.2em black;
 }
