--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -50,7 +50,7 @@ body {background-color:#99CCFF;
 #banner h1 { color: #fff; 
   padding: 50px 0 0 20px; 
   margin: -.4em; 
-  font-size: 2.6em; 
+  font-size: 125%; 
 text-shadow: 0.1em 0.1em 0.2em black;
 }
 header {
