--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -43,7 +43,7 @@ h1 { font-size: 125%; color : maroon; position: relative; left:90px; top: 0px; w
 /* Listing 8-5b. The CSS Style Sheet for Listing 8-5a (css3-text-shadow.css) */
 body {background-color:#99CCFF;
 }
-#banner h1 { color: #fff; padding: 50px 0 0 20px; margin: 0; font-size: 2.6em; 
+#banner h1 { color: #fff; padding: 50px 0 0 20px; margin: 0; font-size: 300%; 
 text-shadow: 0.1em 0.1em 0.2em black;
 }
 #rosette { position:relative; left:750px; top:5px; 
