--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -44,7 +44,7 @@ body {background-color:#99CCFF;
 #banner h1 { color: #fff; padding: 50px 0 0 20px; margin: 0; font-size: 300%; 
 text-shadow: 0.1em 0.1em 0.2em black;
 }
-#rosette { position:relative; left:750px; top:5px; 
+#rosette { position:relative; left:750px; top:.6em; 
 } 
 #html5stylecontent { background:#FFF url(images/green-grad.jpg) repeat-x !important; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; width: 904px; margin-top:403px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon; 
 } 
