--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -11,9 +11,9 @@ html {
 
 div.wrapper {
     position: relative; 
-    top: 4em; 
+    top: 0; 
     left: 0; 
-    width: 61em; 
+    width: 950px; 
     margin: auto;
     background:#FFF url(images/green-grad.jpg) repeat-x!important;
     color: #333;
