--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -9,7 +9,7 @@ div.wrapper {
     color: #333;
 }
 
-header {width:100%; height:80px; color:black; background-color:#FFCC00;
+header {width: 920px; height:180px; color:black; background-color:#FFCC00;
 padding-top:10px;
 }
 h1 { font-size:200%; font-weight:bold; margin-top:20px;
